2006-11-30  Walter Doerwald  <walter@livinglogic.de>
	* IPython/Extensions/ibrowse.py: Add two new commands to ibrowse:
	"refresh" (mapped to "r") refreshes the screen by restarting the iterator.
	"refreshfind" (mapped to "R") does the same but tries to go back to the same
	object the cursor was on before the refresh. The command "markrange" is
	mapped to "%" now.

2006-11-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_debug): new %debug magic to activate the
	interactive debugger on the last traceback, without having to call
	%pdb and rerun your code.  Made minor changes in various modules,
	should automatically recognize pydb if available.

2006-11-28  Ville Vainio  <vivainio@gmail.com>

	* completer.py: If the text start with !, show file completions
	properly. This helps when trying to complete command name
	for shell escapes.

2006-11-27  Ville Vainio  <vivainio@gmail.com>

	* ipy_stock_completers.py: bzr completer submitted by Stefan van 
	der Walt. Clean up svn and hg completers by using a common 
	vcs_completer. 
	
2006-11-26  Ville Vainio  <vivainio@gmail.com>

	* Remove ipconfig and %config; you should use _ip.options structure
	directly instead!
	
	* genutils.py: add wrap_deprecated function for deprecating callables
	
	* iplib.py: deprecate ipmagic, ipsystem, ipalias. Use _ip.magic and
	_ip.system instead. ipalias is redundant.
	
	* Magic.py: %rehashdir no longer aliases 'cmdname' to 'cmdname.exe' on 
	win32, but just 'cmdname'. Other extensions (non-'exe') are still made 
	explicit.

	* ipy_stock_completers.py: 'hg' (mercurial VCS) now has a custom 
	completer. Try it by entering 'hg ' and pressing tab.

	* macro.py: Give Macro a useful __repr__ method
	
	* Magic.py: %whos abbreviates the typename of Macro for brevity.
	
2006-11-24  Walter Doerwald  <walter@livinglogic.de>
	* IPython/Extensions/astyle.py: Do a relative import of ipipe, so that
	we don't get a duplicate ipipe module, where registration of the xrepr