@@ -4,6 +4,7 @@
 	"refreshfind" (mapped to "R") does the same but tries to go back to the same
 	object the cursor was on before the refresh. The command "markrange" is
 	mapped to "%" now.
+	* IPython/Extensions/ibrowse.py: Make igrpentry and ipwdentry comparable.
 
 2006-11-29  Fernando Perez  <Fernando.Perez@colorado.edu>
 
